# metrack

./: .gitignore  README.md  pyproject.toml  requir.txt
metrack/: hooks.py  patches.txt
metrack/api/: __init__.py  kiran.py
metrack/api/ai/: config.py  open_ai.py
metrack/api/scraping/: test.py
metrack/api/scraping/core/: __init__.py  insight_ias.py  scraper.py  test.py
metrack/api/scraping/markdown/: __init__.py
metrack/api/tagging/: __init__.py  cache.py  fais.py  faiss.py
metrack/config/: __init__.py
metrack/controllers/: search_controller.py
metrack/jobs/: midnight.py
metrack/metrack/doctype/assignment/: assignment.json  assignment.py
metrack/metrack/doctype/concept/: concept.js  concept.json  concept.py  test_concept.py
metrack/metrack/doctype/daily_self_reporting/: daily_self_reporting.js  daily_self_reporting.json  daily_self_reporting.py  test_daily_self_reporting.py
metrack/metrack/doctype/daily_self_reporting_item/: daily_self_reporting_item.json  daily_self_reporting_item.py
metrack/metrack/doctype/doctype_timer/: doctype_timer.py  (+1 more)
metrack/overrides/doctype/: doctype.py
metrack/patches/: clean_extra_space.py  create_indexes_meilisearch.py  markdown_urls.py  reset_mcq.py  sub_themes.py
metrack/patches/agriculture_pyq/: __init__.py
metrack/patches/create_microtopics_ias_score/: __init__.py
metrack/patches/mcq_examrobot/: __init__.py
metrack/patches/project_ias/: mains.py  prelims.py
metrack/patches/tagging/: __init__.py
metrack/public/js/: metrack.bundle.js  prelims.bundle.js
metrack/scripts/scrape/: quotes.drishtiias.py
(+82 files in other folders)
