[project]
name = "metrack"
authors = [
    { name = "nishantbhickta", email = "nishantbhickta@gmail.com"}
]
description = "App to track"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    # "frappe~=15.0.0" # Installed and managed by bench.
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"
markdownify=="~=0.11.6"
readabilipy=="~=0.3.0"
fake-useragent=="~=2.0.3"
tenacity=="~=8.2.3"
beautifulsoup4=="~=4.12.3"

# These dependencies are only installed when developer mode is enabled
[tool.bench.dev-dependencies]
# package_name = "~=1.1.0"