[project]
name = "metrack"
authors = [
    { name = "nishantbhickta", email = "nishantbhickta@gmail.com" }
]
description = "App to track various metrics"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    "markdownify~=0.11.6",
    "readabilipy~=0.3.0",
    "fake-useragent~=2.0.3",
    "tenacity~=8.2.3",
    "beautifulsoup4~=4.12.3",
    "tqdm",
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

# These dependencies are only installed when developer mode is enabled
[tool.bench.dev-dependencies]
# package_name = "~=1.1.0"
